<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/gads"
            app:layout_constraintStart_toEndOf="@id/image_back_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_project_submission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:padding="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/project_submission"
        android:textColor="@color/orange"
        android:textStyle="bold"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:background="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/text_project_submission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/first_name"
        android:textSize="16sp"
        android:inputType="text"
        android:padding="10dp"
        android:background="@drawable/submission_container"
        app:layout_constraintTop_toBottomOf="@id/text_project_submission"
        app:layout_constraintEnd_toStartOf="@id/edit_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_email"/>

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:inputType="text"
        android:textSize="16sp"
        android:padding="10dp"
        android:background="@drawable/submission_container"
        android:hint="@string/last_name"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_first_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_first_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/submission_container"
        android:padding="10dp"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_first_name"
        app:layout_constraintBottom_toTopOf="@id/edit_project_link"/>

    <EditText
        android:id="@+id/edit_project_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/submission_container"
        android:padding="10dp"
        android:textSize="16sp"
        android:hint="@string/project_link"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintBottom_toTopOf="@id/button_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/orange_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_project_link"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@android:color/white"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>